# code-samples

./: .gitignore  HPGe time (GridSearch).ipynb  HPGe_time_(CNN_API_Robust).ipynb  README.md
Django_REST_recipes/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Django_REST_recipes/.github/workflows/: checks.yml
Django_REST_recipes/app/app/: settings.py
Django_REST_recipes/app/core/: admin.py  models.py
Django_REST_recipes/app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_auto_20230102_1016.py  0004_auto_20230102_1610.py  0005_recipe_image.py
Django_REST_recipes/app/core/tests/: test_admin.py  test_commands.py  test_models.py
Django_REST_recipes/app/recipe/: serializers.py  urls.py  views.py
Django_REST_recipes/app/recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
Django_REST_recipes/app/user/: serializers.py  urls.py  views.py
Django_REST_recipes/app/user/tests/: test_user_api.py
Django_REST_recipes/proxy/: Dockerfile
Docker image (+docker hub upload)/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Docker image (+docker hub upload)/console_bot/: command_handling.py  interface.py  main.py
Docker image (+docker hub upload)/console_bot/address_book/: address_book_class.py  address_book_functions.py
Docker image (+docker hub upload)/console_bot/notes/: notes_class.py
FastAPI-Notes/: .gitignore  README.md  main.py  pyproject.toml
FastAPI-Notes/config/: config.yaml
FastAPI-Notes/db/: connect.py
FastAPI-Notes/migrations/: env.py
FastAPI-Notes/migrations/versions/: 45f1cdd8e0c4_add_user.py  8e975633e3dc_init.py
FastAPI-Notes/src/: models.py
FastAPI-Notes/src/libs/: oauth2.py
FastAPI-Notes/src/middlewares/: process_time.py
FastAPI-Notes/src/repository/: notes.py  users.py
FastAPI-Notes/src/routes/: auth.py  notes.py  users.py
FastAPI-Notes/src/schemas/: notes.py
HPGe timing (ML)/: README.md
MongoDB/: README.md  command_handling.py  config.ini  interface.py  main.py  pyproject.toml
MongoDB/modules/: address_book.py  notebook.py  shared_functions.py  validation.py
MongoDB/modules/sorting/: sort.py
MongoDB/src/: models.py  seed.py
Personal assistant (Flask)/: README.md  pyproject.toml
Personal assistant (Flask)/config/: config.py
Personal assistant (Flask)/data/: app.db.sqlite3
Personal assistant (Flask)/migrations/versions/: 1c21b89b8e1c_add_notes_and_tags_with_m2m.py  1ffeae2aa43e_initial_migration.py  2d2ca3d83bab_change_name_of_field_in_email_model.py  302c80897131_remove_email_field.py  62f51df5de97_edit_imports.py  90e9623fc23b_add_contact_models.py  c04e45dfa8ea_add_unique_property_to_username.py
Personal assistant (Flask)/src/: __init__.py  db_init.py  models.py  routes.py
Personal assistant (Flask)/src/libs/: forms.py  validation_schemas.py
Personal assistant (Flask)/src/repository/: __init__.py  contacts.py  notes.py  seed.py  users.py
Personal assistant (Flask)/src/static/: style.css
Personal assistant (Flask)/src/templates/: base.html
PostgreSQL/: .gitignore  README.md  alembic.ini  pyproject.toml
PostgreSQL/console_bot/: command_handling.py  interface.py  main.py
PostgreSQL/console_bot/modules/: address_book.py  notebook.py  shared_functions.py
PostgreSQL/console_bot/notebook/: notes_class.py
PostgreSQL/console_bot/src/: db.py  models.py  repository.py  seed.py
PostgreSQL/migration/: env.py
PostgreSQL/migration/versions/: 078282596d1a_edit_relationship_btwn_tag_and_note.py  0ebd5854c628_creation_date_in_notes.py  2230a36b1717_note_tag.py  33714b715511_edit_relationship_btwn_tag_and_note.py  4cb592d4ddc6_phone_email_nullable.py  72d3d8d77182_change_relationship_btwn_tag_and_note.py  92aad59e35b3_add_onedelete_cascade.py  945494fac9ea_change_tags_in_notes_to_json.py  cb4d941d284f_init.py
SQL querying/: README.md  init_db.sql  main.py  pyproject.toml
asyncio/: .gitignore  README.md  file_parser.py  main.py  pyproject.toml
(+40 files in other folders)
