[tool.poetry]
name = "django-rest-recipe"
version = "0.1.0"
description = "Django REST recipe app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_rest_recipe"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2.4,<3.3"
djangorestframework = ">=3.12.4,<3.13"
psycopg2 = "^2.9.5"
drf-spectacular = ">=0.15.1,<0.16"
Pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
