[tool.poetry]
name = "notes-fistapi"
version = "0.1.0"
description = ""
authors = ["Michail Kravchenko <66253910+kravchenmd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "notes_fistapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
SQLAlchemy = "^1.4.42"
psycopg2 = "^2.9.4"
alembic = "^1.8.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
