[tool.poetry]
name = "py6web-hw10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "py6web_hw10"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.24.2"
Faker = "^14.2.0"
psutil = "^5.9.2"
prompt-toolkit = "^3.0.31"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
