[tool.poetry]
name = "py6web_hw8"
version = "0.1.0"
description = ""
authors = ["kravchenmd <kravchenmd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
Faker = "^14.2.0"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
