[tool.poetry]
name = "py6web_hw6"
version = "0.1.0"
description = ""
authors = ["kravchenmd <kravchenmd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiopath = "^0.6.10"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
